--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <script src="https://telegram.org/js/telegram-web-app.js" strategy="beforeInteractive"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Roaches</title>
   </head>
   <body>
     <div id="root"></div>
